PropertyChange values changed to final static Strings; JSMoveViedeo state machine improved